# Corte-2-Alse

./: num_colum_excel.cpp
entrega_4/ejercicio_1_carrito/: CMakeLists.txt
entrega_4/ejercicio_1_carrito/include/: CarritoCompras.h  ItemCarrito.h  Producto.h  Usuario.h
entrega_4/ejercicio_1_carrito/src/: CarritoCompras.cpp  ItemCarrito.cpp  Producto.cpp  Usuario.cpp  main.cpp
entrega_4/ejercicio_2_uml/: README.md  diagrama_uml.md  diagrama_uml.puml
entrega_parcial/: producto
entrega_parcial/include/: Producto.h
entrega_parcial/src/: Producto.cpp  main.cpp
segunda_entrega/: num_column_excel  stock_profit.cpp  triangulo_pascal.cpp
tercera_entrega/Biblioteca/: CMakeLists.txt
tercera_entrega/Biblioteca/include/: Biblioteca.h  Libro.h
tercera_entrega/Biblioteca/src/: Biblioteca.cpp  Libro.cpp  main.cpp
